--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -15,12 +15,13 @@ section[drawer] {
     }
   }
   .side-menu {
+    align:right;
     .side-menu-item {
       cursor: pointer;
       display: block;
       height: @app-side-menu-item-height;
       line-height: (@app-side-menu-item-height - 20);
-      padding: 10px;
+      padding: 10px 10px 10px 19px;
       font-size: 16px;
       color: @app-side-menu-text-color;
       //border-bottom: 1px solid lighten(@app-side-menu-background, 5%);
